Fix steps code-block overflow style (scroll bars always showing).

--- a/public/styles.styl
+++ b/public/styles.styl
@@ -292,13 +292,17 @@ main-color = orange-color
       border-top none
       border-radius 0 0 3px 3px
       padding 25px 20px
-      overflow scroll
+      overflow-x auto
 
     .code-block
       font-family 'Inconsolata', monospace // @todo: change font
       font-size 14px
       padding-right 20px
       margin-bottom 15px
+
+      a,
+      a:hover
+        color $color-blue-light
 
     hr
       border-top 1px solid rgba(white, 0.10)
